--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "cf1fd572",
+   "metadata": {},
+   "source": [
+    "# Object detection with scivision\n",
+    "\n",
+    "In this notebook, we use scivision to load several object detection models from [Hugging Face](https://huggingface.co/models?pipeline_tag=object-detection&sort=downloads) and run them on compatible datasource from the scivision catalog.\n",
+    "\n",
+    "The hugging face models are loaded via the hugging face object detection plugin for scivision, which is a model entry in the scivision catalog. Click the [link to the plugin repo](https://github.com/alan-turing-institute/scivision_huggingface_objectdetection) to find out which models it can be used to load. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "b4227a1b",
@@ -35,6 +47,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "eee98e52",
+   "metadata": {},
+   "source": [
+    "Now let's load two of the models:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "7797dbad",
@@ -52,6 +72,14 @@
    "outputs": [],
    "source": [
     "yolo_model = load_pretrained_model(model_repo, model='hustvl_yolos_tiny')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f0c2f29",
+   "metadata": {},
+   "source": [
+    "We can search the scivision for compatible datasources:"
    ]
   },
   {
@@ -171,79 +199,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60b5bb0d",
+   "metadata": {},
+   "source": [
+    "Let's choose the test dataset \"data-003\" which has includes an image of an airport."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "a326ba83",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>description</th>\n",
-       "      <th>tasks</th>\n",
-       "      <th>domains</th>\n",
-       "      <th>url</th>\n",
-       "      <th>format</th>\n",
-       "      <th>labels_provided</th>\n",
-       "      <th>institution</th>\n",
-       "      <th>tags</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>data-003</td>\n",
-       "      <td>Koala</td>\n",
-       "      <td>(TaskEnum.object_detection, TaskEnum.classific...</td>\n",
-       "      <td>(computer-vision,)</td>\n",
-       "      <td>https://github.com/alan-turing-institute/scivi...</td>\n",
-       "      <td>image</td>\n",
-       "      <td>True</td>\n",
-       "      <td>(Wikipedia by Erik Veland,)</td>\n",
-       "      <td>(demo,)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       name description                                              tasks  \\\n",
-       "3  data-003       Koala  (TaskEnum.object_detection, TaskEnum.classific...   \n",
-       "\n",
-       "              domains                                                url  \\\n",
-       "3  (computer-vision,)  https://github.com/alan-turing-institute/scivi...   \n",
-       "\n",
-       "  format  labels_provided                  institution     tags  \n",
-       "3  image             True  (Wikipedia by Erik Veland,)  (demo,)  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['test_image', 'airport']\n"
+     ]
     }
    ],
    "source": [
     "target_datasource = compatible_datasources.loc[compatible_datasources['name'] == 'data-003']\n",
-    "target_datasource"
+    "data_config = load_dataset(target_datasource.url.item())\n",
+    "print([i for i in data_config.keys()])"
    ]
   },
   {
@@ -262,8 +242,15 @@
     }
    ],
    "source": [
-    "data_config = load_dataset(target_datasource.url.item()) \n",
     "airport = data_config.airport().to_dask() # The xarray.DataArray is one format accepted by the our models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ced823",
+   "metadata": {},
+   "source": [
+    "What does this image look like?"
    ]
   },
   {
@@ -275,7 +262,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x18867a280>"
+       "<matplotlib.image.AxesImage at 0x184890f40>"
       ]
      },
      "execution_count": 8,
@@ -301,19 +288,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a86be3bd",
+   "metadata": {},
+   "source": [
+    "## Model predictions\n",
+    "\n",
+    "Now let's use predict the objects in the airport test image we found in the scivision catalog, using the loaded object detection models. The output can be visualised with scivision's `predplot` function."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "53d6e2a9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fb_bboxes = facebook_model.predict(airport)"
+    "fb_model_objects = facebook_model.predict(airport)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a9731c7e",
+   "id": "8e442b0d",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +327,7 @@
     }
    ],
    "source": [
-    "predplot(airport, fb_bboxes)"
+    "predplot(airport, fb_model_objects, task=\"object detection\")"
    ]
   },
   {
@@ -340,13 +337,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yolo_bboxes = yolo_model.predict(airport)"
+    "yolo_model_objects = yolo_model.predict(airport)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "fa9d154d",
+   "id": "67f54a52",
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +360,71 @@
     }
    ],
    "source": [
-    "predplot(airport, yolo_bboxes)"
+    "predplot(airport, yolo_model_objects, task=\"object detection\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c3e2f13",
+   "metadata": {},
+   "source": [
+    "What does the output from the model predict look like? This format is accepted by `predplot`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9791a9d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'score': 0.968877911567688,\n",
+       "  'label': 'truck',\n",
+       "  'box': {'xmin': 56, 'ymin': 306, 'xmax': 239, 'ymax': 364}},\n",
+       " {'score': 0.9706903696060181,\n",
+       "  'label': 'person',\n",
+       "  'box': {'xmin': 505, 'ymin': 282, 'xmax': 518, 'ymax': 301}},\n",
+       " {'score': 0.9695870280265808,\n",
+       "  'label': 'truck',\n",
+       "  'box': {'xmin': 496, 'ymin': 292, 'xmax': 592, 'ymax': 331}},\n",
+       " {'score': 0.982231855392456,\n",
+       "  'label': 'person',\n",
+       "  'box': {'xmin': 445, 'ymin': 263, 'xmax': 457, 'ymax': 278}},\n",
+       " {'score': 0.9789905548095703,\n",
+       "  'label': 'person',\n",
+       "  'box': {'xmin': 576, 'ymin': 283, 'xmax': 595, 'ymax': 319}},\n",
+       " {'score': 0.9122430682182312,\n",
+       "  'label': 'person',\n",
+       "  'box': {'xmin': 294, 'ymin': 294, 'xmax': 305, 'ymax': 309}},\n",
+       " {'score': 0.9886151552200317,\n",
+       "  'label': 'truck',\n",
+       "  'box': {'xmin': 250, 'ymin': 293, 'xmax': 328, 'ymax': 335}},\n",
+       " {'score': 0.988030731678009,\n",
+       "  'label': 'bus',\n",
+       "  'box': {'xmin': 0, 'ymin': 226, 'xmax': 81, 'ymax': 304}},\n",
+       " {'score': 0.9539830088615417,\n",
+       "  'label': 'person',\n",
+       "  'box': {'xmin': 435, 'ymin': 268, 'xmax': 446, 'ymax': 281}},\n",
+       " {'score': 0.9027414917945862,\n",
+       "  'label': 'truck',\n",
+       "  'box': {'xmin': 404, 'ymin': 277, 'xmax': 478, 'ymax': 314}},\n",
+       " {'score': 0.9780088663101196,\n",
+       "  'label': 'truck',\n",
+       "  'box': {'xmin': 325, 'ymin': 280, 'xmax': 409, 'ymax': 327}},\n",
+       " {'score': 0.9989450573921204,\n",
+       "  'label': 'airplane',\n",
+       "  'box': {'xmin': 324, 'ymin': 104, 'xmax': 524, 'ymax': 169}}]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fb_model_objects"
    ]
   }
  ],
