--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -515,6 +515,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a5ae0bf",
+   "metadata": {},
+   "source": [
+    "Now let's try the other model we loaded. We can also set the optional `label_nums` flag so the bounding boxes are numbered as well as colored."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "bd2b2385",
