--- a/segmentation.ipynb
+++ b/segmentation.ipynb
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0b3c2247",
+   "id": "79860a8a",
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "08b2107a",
+   "id": "33cc5d19",
    "metadata": {},
    "outputs": [
     {
@@ -471,137 +471,60 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "73256d51",
+   "cell_type": "markdown",
+   "id": "efc40734",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[[[ -3.7153,  -5.7433,  -6.4953,  ...,  -7.5164,  -6.5161,  -4.3154],\n",
-       "          [ -6.5732,  -9.9071, -10.2958,  ...,  -6.7219,  -6.9162,  -4.9539],\n",
-       "          [ -9.2753, -12.8660, -13.1855,  ...,  -6.4727,  -6.8982,  -5.3361],\n",
-       "          ...,\n",
-       "          [ -1.8901,  -1.5067,  -0.3558,  ...,  -3.5221,  -2.8234,  -2.6252],\n",
-       "          [ -1.0712,  -0.8301,  -0.0810,  ...,  -3.4372,  -2.4748,  -2.7681],\n",
-       "          [ -0.6574,  -0.5976,  -0.1095,  ...,  -2.6412,  -1.8447,  -2.0187]],\n",
-       "\n",
-       "         [[-11.6866, -18.0342, -20.7871,  ..., -15.9644, -14.8473, -10.5957],\n",
-       "          [-20.6804, -31.4651, -34.6587,  ..., -20.9537, -20.7988, -14.9584],\n",
-       "          [-26.2473, -38.8885, -41.7020,  ..., -22.0178, -21.8092, -15.2180],\n",
-       "          ...,\n",
-       "          [-14.3103, -19.3528, -19.0460,  ..., -21.8795, -19.5438, -13.3778],\n",
-       "          [-10.8198, -15.1212, -15.1547,  ..., -18.9968, -15.9046, -10.8503],\n",
-       "          [ -5.4623,  -7.9148,  -7.5318,  ..., -11.3211,  -9.3509,  -6.4542]],\n",
-       "\n",
-       "         [[ -4.4071,  -7.6395, -10.8685,  ...,  -9.6080,  -8.6991,  -5.8750],\n",
-       "          [ -9.9175, -16.2803, -20.3603,  ..., -12.5761, -12.6969,  -9.1994],\n",
-       "          [-15.2171, -23.1421, -27.3745,  ..., -12.2272, -12.1483,  -8.6042],\n",
-       "          ...,\n",
-       "          [ -4.2259,  -5.6275,  -5.6744,  ..., -14.2852, -13.4351,  -9.3060],\n",
-       "          [ -1.1444,  -0.8874,  -0.5032,  ...,  -6.8040,  -5.7547,  -4.4408],\n",
-       "          [  1.1638,   1.8497,   2.8522,  ...,  -1.4876,  -0.8009,  -1.0225]],\n",
-       "\n",
-       "         ...,\n",
-       "\n",
-       "         [[-12.8607, -19.4458, -22.1778,  ..., -18.1949, -17.3751, -12.6408],\n",
-       "          [-23.1012, -34.6331, -37.7370,  ..., -23.1519, -23.9745, -17.8005],\n",
-       "          [-29.8430, -43.3938, -46.0078,  ..., -23.0196, -23.9680, -17.4179],\n",
-       "          ...,\n",
-       "          [-16.2837, -22.0491, -21.9836,  ..., -23.0412, -20.1667, -13.7054],\n",
-       "          [-12.1147, -16.6342, -16.5382,  ..., -18.6188, -15.2763, -10.3543],\n",
-       "          [ -5.7538,  -8.1150,  -7.5406,  ..., -10.3828,  -8.4124,  -5.8576]],\n",
-       "\n",
-       "         [[ -5.9756,  -9.3261, -10.7880,  ..., -14.8862, -12.8650,  -8.4023],\n",
-       "          [-10.5322, -16.1507, -17.2465,  ..., -15.9893, -15.2506, -10.1572],\n",
-       "          [-14.5236, -20.6365, -21.1715,  ..., -15.1567, -14.6663, -10.1525],\n",
-       "          ...,\n",
-       "          [ -2.3900,  -2.1286,  -0.8689,  ...,  -4.9716,  -4.0204,  -3.7443],\n",
-       "          [ -1.4586,  -1.2167,  -0.2754,  ...,  -4.2496,  -3.0182,  -3.2938],\n",
-       "          [ -0.7622,  -0.8187,  -0.1277,  ...,  -2.9831,  -2.0845,  -2.2473]],\n",
-       "\n",
-       "         [[ -4.2083,  -6.4215,  -7.1892,  ...,  -7.9774,  -7.1019,  -4.6091],\n",
-       "          [ -6.9816, -10.5825, -11.1622,  ...,  -7.6992,  -7.7631,  -5.4777],\n",
-       "          [ -9.2632, -13.0752, -13.7315,  ...,  -7.4157,  -7.6548,  -5.6943],\n",
-       "          ...,\n",
-       "          [ -5.6827,  -6.8732,  -5.8576,  ...,  -6.8223,  -6.0179,  -4.6633],\n",
-       "          [ -4.5240,  -5.8855,  -5.1686,  ...,  -6.5172,  -5.1626,  -4.2788],\n",
-       "          [ -2.6598,  -3.6385,  -3.1323,  ...,  -4.6047,  -3.6008,  -3.0852]]]],\n",
-       "       grad_fn=<ViewBackward0>)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "fb_outputs.pred_masks"
+    "Experiment with visualising segmentation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "ba9ffc29",
+   "execution_count": 26,
+   "id": "6a7c008e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nv_outputs = nvidia_model.predict(dog_cat)"
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "f098e1d4",
+   "execution_count": 27,
+   "id": "d6c8c711",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_mask(pred_mask):\n",
+    "    pred_mask = tf.math.argmax(pred_mask, axis=-1)\n",
+    "    pred_mask = pred_mask[..., tf.newaxis]\n",
+    "    return pred_mask[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2219144a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'SemanticSegmenterOutput' object has no attribute 'pred_masks'",
+     "ename": "RuntimeError",
+     "evalue": "Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead.",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [16]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mnv_outputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpred_masks\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SemanticSegmenterOutput' object has no attribute 'pred_masks'"
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [30]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m pred_mask \u001b[38;5;129;01min\u001b[39;00m fb_outputs\u001b[38;5;241m.\u001b[39mpred_masks:\n\u001b[0;32m----> 2\u001b[0m     display(\u001b[43mcreate_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_mask\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "Input \u001b[0;32mIn [27]\u001b[0m, in \u001b[0;36mcreate_mask\u001b[0;34m(pred_mask)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate_mask\u001b[39m(pred_mask):\n\u001b[0;32m----> 2\u001b[0m     pred_mask \u001b[38;5;241m=\u001b[39m \u001b[43mtf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43margmax\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_mask\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43maxis\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m     pred_mask \u001b[38;5;241m=\u001b[39m pred_mask[\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m\u001b[38;5;241m.\u001b[39m, tf\u001b[38;5;241m.\u001b[39mnewaxis]\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m pred_mask[\u001b[38;5;241m0\u001b[39m]\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/scivision/lib/python3.9/site-packages/tensorflow/python/util/traceback_utils.py:153\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m    152\u001b[0m   filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[0;32m--> 153\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28mNone\u001b[39m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    155\u001b[0m   \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
+      "File \u001b[0;32m/opt/anaconda3/envs/scivision/lib/python3.9/site-packages/torch/_tensor.py:732\u001b[0m, in \u001b[0;36mTensor.__array__\u001b[0;34m(self, dtype)\u001b[0m\n\u001b[1;32m    730\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m handle_torch_function(Tensor\u001b[38;5;241m.\u001b[39m__array__, (\u001b[38;5;28mself\u001b[39m,), \u001b[38;5;28mself\u001b[39m, dtype\u001b[38;5;241m=\u001b[39mdtype)\n\u001b[1;32m    731\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m dtype \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m--> 732\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    733\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    734\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mnumpy()\u001b[38;5;241m.\u001b[39mastype(dtype, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Can't call numpy() on Tensor that requires grad. Use tensor.detach().numpy() instead."
      ]
     }
    ],
    "source": [
-    "nv_outputs.pred_masks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "70392415",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ms_outputs = microsoft_model.predict(dog_cat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "82a67308",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'SemanticSegmenterOutput' object has no attribute 'pred_masks'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [17]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mms_outputs\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpred_masks\u001b[49m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'SemanticSegmenterOutput' object has no attribute 'pred_masks'"
-     ]
-    }
-   ],
-   "source": [
-    "ms_outputs.pred_masks"
+    "for pred_mask in fb_outputs.pred_masks:\n",
+    "    display(create_mask(pred_mask))"
    ]
   }
  ],
