--- a/how-to-use-scivision.ipynb
+++ b/how-to-use-scivision.ipynb
@@ -161,6 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Note: when loading this model repo for the first time you'll need to add the allow_install=True flag\n",
     "resnet_model = load_pretrained_model(model_repo, model='resnet18')\n",
     "densenet_model = load_pretrained_model(model_repo, model='densenet121')"
    ]
