--- a/object-detection.ipynb
+++ b/object-detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3383ebf5",
+   "id": "707e25f6",
    "metadata": {},
    "source": [
     "### Notebook improvement notes:\n",
@@ -79,6 +79,7 @@
    },
    "outputs": [],
    "source": [
+    "# Note: when loading this model repo for the first time you'll need to add the allow_install=True flag\n",
     "facebook_model = load_pretrained_model(model_repo, model='facebook_detr_resnet_50')"
    ]
   },
