--- a/segmentation.ipynb
+++ b/segmentation.ipynb
@@ -709,6 +709,7 @@
     }
    ],
    "source": [
+    "# Note: when loading this model repo for the first time you'll need to add the allow_install=True flag\n",
     "facebook_model = load_pretrained_model(model_repo, model='facebook_detr_resnet_50_panoptic', allow_install=True)\n",
     "nvidia_model = load_pretrained_model(model_repo, model='nvidia_segformer_b5_finetuned_ade_640_640')\n",
     "microsoft_model = load_pretrained_model(model_repo, model='microsoft_beit_large_finetuned_ade_640_640')"
